# tgap

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements-test.txt
src/tgap/: __init__.py  __main__.py  cli.py
tests/: test_tgap.py
