[build-system]
build-backend = "setuptools.build_meta"

requires = [
  "setuptools>=61",
]

[project]
name = "tgap"
version = "2024.5.0"
description = "A command-line tool for performing various time-related calculations."
readme = "README.md"
keywords = [
  "calculator",
  "datetime",
]
license = { text = "MIT" }
authors = [
  { name = "Taiki Kanda", email = "taiki@konnyak.com" },
]
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

urls."Source" = "https://github.com/konnyakmannan/tgap.git"

scripts.tgap = "tgap.__main__:run"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = [
  "src",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "B",
  "I",
]
ignore = [
]

fixable = [
  "ALL",
]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
